Code cleanup, removal of TT in move ordering function, rework of Qsearch move ordering